@@ -1,6 +1,5 @@
-{% assign sidebar = site.data[page.sidebar] %}
+{% assign sidebar = site.data["posts"] %}
 <div class="mydocsidebar">
-
 
 <div class="sidebar-inner">
 
@@ -24,25 +23,17 @@
 <!-- end search bar -->
 {% endif %}
 
-{% unless page.sidebar == null %}
-	<div class="productTitle">{{sidebar.sidebarTitle}}</div>
-		
-	{% if page.photo %}
 
-			{% if page.photo_alt_text %}
-				<img class="sidebar-photo" alt="{{page.photo_alt_text}}" src="{{ site.home_url }}{{page.photo}}" />
-			{% else %}
-				<img class="sidebar-photo" alt="Photo image" src="{{ site.home_url }}{{page.photo}}" />
-			{% endif %}
+	<div class="blog-name">
+		<a href="{{ site.home_url }}post">{{site.uistring.blog}}</a>
+	</div>
 
-	{% endif %}
+	<img class="sidebar-photo" alt="{{site.blog_logo_alt_text}}" src="{{ site.home_url }}{{site.blog_logo}}" />
+
 	
-	{% if sidebar.folders %}
 		<p class="external">
 			<a href="#" id="collapseAll">{{site.uistring.collapseall}}</a> | <a href="#" id="expandAll">{{site.uistring.expandall}}</a>
 		</p>
-	{% endif %}
-{% endunless %}
 
     <ul id="docnavsidebar" class="docnav">
     {% for folder in sidebar.folders %}
@@ -128,6 +119,15 @@
         {% endfor %}
     </li>
 </ul>
+
+<div class="all-tags">
+	<h2>All Tags</h2>
+	<ul id="alltags">
+		{% for tag in site.tags %}
+			<li><a class="noExtIcon" href="{{ site.home_url }}tag/{{ tag[0] }}">{{ tag[0] }} ({{ tag[1].size }})</a></li>
+		{% endfor %}
+	</ul>
+</div>
 
 </div>
 </div>
