@@ -4,24 +4,18 @@
 	<div class="row row-offcanvas row-offcanvas-left">
 
             <!-- sidebar -->
-			{% if page.include_sidebar %}
             <div class="col-xs-6 col-sm-3 sidebar-offcanvas" id="sidebar" role="navigation">
 
-                {% include sidebar.html %}
+                {% include blog_sidebar.html %}
 
             </div>
-			{% endif %}
 
             <!-- main area -->
 			{% unless page.include_sidebar %}
-				<div class="col-xs-12 col-sm-9 main main-no-sidebar">
+				<div class="col-xs-12 col-sm-9 main">
 			{% else %}
 				<div class="col-xs-12 col-sm-9 main">
 			{% endunless %}
-
-				<div class="blog-name">
-					<a href="{{ site.home_url }}post">{{site.uistring.blog}}</a>
-				</div>
 
                 <h1 class="page-title-h1">{{page.title}}</h1>
 
