@@ -4,13 +4,11 @@
 	<div class="row row-offcanvas row-offcanvas-left">
 
             <!-- sidebar -->
-			{% if page.include_sidebar %}
             <div class="col-xs-6 col-sm-3 sidebar-offcanvas" id="sidebar" role="navigation">
 
-                {% include sidebar.html %}
+                {% include blog_sidebar.html %}
 
             </div>
-			{% endif %}
 
             <!-- main area -->
 			{% unless page.include_sidebar %}
