@@ -13,13 +13,11 @@ show_tags: true
         <div class="row row-offcanvas row-offcanvas-left">
 
             <!-- sidebar -->
-			{% if page.include_sidebar %}
             <div class="col-xs-6 col-sm-3 sidebar-offcanvas" id="sidebar" role="navigation">
 
-                {% include sidebar.html %}
+                {% include blog_sidebar.html %}
 
             </div>
-			{% endif %}
 			
             <!-- main area TTTTTT -->
 			{% unless page.include_sidebar %}
