@@ -17,7 +17,7 @@
 }
 .docnav li a:hover,
 .docnav li a:active {
-  text-decoration: none;
+
 }
 /* plus */
 
@@ -181,6 +181,12 @@ ul#docnavsidebar li a:focus {
 	margin-bottom: 5px;
 	font-size: 16px;
 	font-weight: bold;
+}
+
+#sidebar .external {
+	width: 90%;
+	text-align: center;
+	margin: 0px 0px 30px 0px;
 }
 
 /* prevents sidebar from showing outside link button */
