@@ -1,0 +1,9 @@
+a,
+a:hover {
+  transition: color 0.1s linear 0s, background 0.1s linear 0s;
+}
+
+.nav li,
+.nav li:hover {
+  transition: color 0.2s linear 0s, background 0.2s linear 0s;
+}
